OLD/02-Traffic_management/05-hello_world_1_Service_Entry/gateway.yaml
apiVersion: networking.istio.io/v1alpha3
kind: Gateway
metadata:
  name: helloworld-gateway
spec:
  selector:
    istio: ingressgateway # use istio default controller
  servers:
    - port:
        number: 80
        name: http
        protocol: HTTP
      hosts:
        - "*"
---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: helloworld-vs
spec:
  hosts:
    - "*"
  gateways:
    - helloworld-gateway
  http:
    - name: http-external-service
      timeout: 3s
      match:
        - uri:
            exact: "/external"
      route:
        - destination:
            host: info.cern.ch
            port:
              number: 80
      rewrite:
        uri: "/"
      headers:
        request:
          set:
            HOST: "info.cern.ch"

    - name: https-external-service-without-headers
      timeout: 3s
      match:
        - uri:
            exact: "/external-noh"
      route:
        - destination:
            host: info.cern.ch
            port:
              number: 80
      rewrite:
        uri: "/"
